2005-01-28  Žygimantas Beručka  <uid0@akl.lt>

	* configure.in (ALL_LINGUAS): Added 'lt' (Lithuanian).

2005-01-27  Sushma Rai  <rsushma@novell.com>

	* exchange-config-listener.[ch] (add_esource)(remove_esource): 
	Changed the arguments for the function. Now reading folder type,
	instead of is_contact_folder flag. 
	Defined Gconf Key values in the header file so that it need not be
	defined by every function calling add/remove esource functions.
	Selecting calendar and tasks automatically, when the account or folder
	is created and unsetting when account or folder is removed.
	(add_sources)(remove_sources): Sending folder type to add_esource()/
	remove_esource() functions. Fixes #71432
	
	* storage/e-folder-exchange.c (e_folder_exchange_new)
	(e_folder_exchange_delete): Similar.

	* storage/exchange-hierarchy-gal.c (exchange_hierarchy_gal_new): Similar
	
	* storage/exchange-hierarchy-foreign.c (remove_folder)
	(exchange_hierarchy_foreign_add_folder): Similar.

	* storage/exchange-hierarchy-favorites.c (remove_folder): Similar.

	* storage/exchange-hierarchy-webdav.c (xfer_folder): Similar.

2005-01-25  Sarfraaz Ahmed <asarfraaz@novell.com>

	* storage/exchange-account.c (exchange_account_connect): Properly
        set use_ntlm when reconnecting to server. This now tries either
        Basic or Plaintext authentication if one of them fails. Patch submitted
        by Soren Hansen and fixes #70730

2005-01-25  Sarfraaz Ahmed <asarfraaz@novell.com>

	* configure.in : Bumped the version to 2.1.4
	* NEWS : Updated
	* addressbook/e-book-backend-exchange.c : fixed some warnings
	* Updated the po files

2005-01-24  Sushma Rai  <rsushma@novell.com>

	* camel/camel-exchange-provider.c: Added CAMEL_URL_ALLOW_AUTH to
	provider structure.

2005-01-24  Sarfraaz Ahmed <asarfraaz@novell.com>

	* camel/camel-exchange-folder.c (transfer_messages_to):
	We should now call journal_transfer instead of journal_append
	* camel/camel-exchange-journal.c : Handle transfer of messages