@@ -1,3 +1,9 @@
+2005-01-29  Sarfraaz Ahmed <asarfraaz@novell.com>
+
+        * storage/exchange-hierarchy-webdav.c (hierarchy_new_folder):
+        Check for duplicate entried being added into the hashtable.
+        Fixes #68330
+
 2005-01-28  Žygimantas Beručka  <uid0@akl.lt>
 
 	* configure.in (ALL_LINGUAS): Added 'lt' (Lithuanian).
